--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DCC0C0"
     tools:context=".fragments.NoteFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Note Fragment"/>
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcViewNote"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
