--- a/app/src/main/res/menu/new_note_menu.xml
+++ b/app/src/main/res/menu/new_note_menu.xml
@@ -6,5 +6,20 @@
         android:id="@+id/id_save"
         android:icon="@drawable/ic_save"
         app:showAsAction="ifRoom"
+        android:orderInCategory="3"
+        />
+    <item
+        android:title="@string/bold"
+        android:id="@+id/id_bold"
+        android:icon="@drawable/ic_bold"
+        app:showAsAction="ifRoom"
+        android:orderInCategory="2"
+        />
+    <item
+        android:title="@string/color"
+        android:id="@+id/id_color"
+        android:icon="@drawable/ic_color"
+        app:showAsAction="ifRoom"
+        android:orderInCategory="1"
         />
 </menu>
