--- a/app/src/main/res/layout/new_list_dialog.xml
+++ b/app/src/main/res/layout/new_list_dialog.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/bCreate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="@string/create_list" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
