--- a/app/src/main/res/layout/list_name_item.xml
+++ b/app/src/main/res/layout/list_name_item.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="65dp"
         android:layout_marginStart="3dp"
         android:layout_marginTop="22dp"
         android:layout_marginEnd="3dp"
