ShopListItemAdapter, xml shop_list_item, library_list_item

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="picker_yellow">#FFD500</color>
     <color name="picker_orange">#C67907</color>
     <color name="back">#3D3C3B</color>
+    <color name="grey">#504F4F</color>
 </resources>
