--- a/app/src/main/res/menu/shop_list_menu.xml
+++ b/app/src/main/res/menu/shop_list_menu.xml
@@ -17,7 +17,7 @@
         android:title="@string/new_item"
         android:id="@+id/new_item"
         android:icon="@drawable/ic_new_shop_item"
-        app:showAsAction="ifRoom|collapseActionView"
+        app:showAsAction="always|collapseActionView"
         android:orderInCategory="1"
         app:actionLayout="@layout/edit_action_layout"
         />
@@ -25,7 +25,7 @@
         android:title="@string/save_item"
         android:id="@+id/save_item"
         android:icon="@drawable/ic_save"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:orderInCategory="2"
         />
 </menu>
