--- a/app/src/main/res/layout/list_name_item.xml
+++ b/app/src/main/res/layout/list_name_item.xml
@@ -72,6 +72,7 @@
         app:srcCompat="@drawable/ic_edit" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/counterCard"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="6dp"
