--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green_main">#24A103</color>
+    <color name="red_main">#EF0606</color>
     <color name="green_main_dark">#175A05</color>
 
     <color name="picker_red">#FF0008</color>
